# fast-api-docker

./: Dockerfile  README.md  Taskfile.yml  compose.yml  pyproject.toml
